--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
+    "mongosh": "^1.1.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   },
